--- a/css/jemdoc.css
+++ b/css/jemdoc.css
@@ -104,12 +104,56 @@ div.menu-category {
 }
 
 .photo{
+		margin-top: 0px;
+	margin-bottom: 0px;
     float:left;
-    width:20%;
+    width:25%;
+}
+.photo2{
+		margin-top: 20px;
+	margin-bottom: 0px;
+    float:left;
+    width:25%;
+}
+.photo3{
+		margin-top: 10px;
+	margin-bottom: 40px;
+    float:left;
+    width:25%;
 }
 .intro{
+	margin-top: 30px;
+	margin-bottom: 40px;
     float:right;
-    width:80%;}
+    width:75%;}
+.intro3{
+	margin-top: 0px;
+	margin-bottom: 100px;
+    float:right;
+    width:75%;}
+
+.publication-entity {
+	font-family: 'gandhi_sansregular';
+	font-size: 1.2em;
+	text-align:justify;
+	margin-top: 20px;
+	line-height: 1.5em;
+}
+.paper-image {
+	width: 10%;
+}
+.paper-title {
+	font-size: 1.1em;
+	font-weight: bold;
+}
+.paper-authors {
+}
+.paper-venue {
+}
+.paper-link a{
+	font-family: 'gandhi_sansregular';
+	font-size: 0.8em;
+}
 
 
 div.menu-item {
