--- a/css/jemdoc.css
+++ b/css/jemdoc.css
@@ -104,31 +104,31 @@ div.menu-category {
 }
 
 .photo{
-		margin-top: 0px;
-	margin-bottom: 0px;
+		margin-top: 0%;
+	margin-bottom: 0%;
     float:left;
     width:35%;
 }
 .photo2{
-		margin-top: 20px;
-	margin-bottom: 0px;
+		margin-top: 2%;
+	margin-bottom: 0%;
     float:left;
     width:35%;
 }
 .photo3{
-		margin-top: 10px;
-	margin-bottom: 40px;
+		margin-top: 1%;
+	margin-bottom: 4%;
     float:left;
     width:35%;
 }
 .intro{
-	margin-top: 30px;
-	margin-bottom: 40px;
+	margin-top: 3%;
+	margin-bottom: 4%;
     float:right;
     width:65%;}
 .intro3{
-	margin-top: 0px;
-	margin-bottom: 100px;
+	margin-top: 0%;
+	margin-bottom: 10%;
     float:right;
     width:65%;}
 
