--- a/css/project.css
+++ b/css/project.css
@@ -23,7 +23,7 @@
   box-shadow:0 0 10px rgba(0, 0, 0, .1);  
 }
 .well-gray{
-	background:#F5F5F5;
+	background:#ffffff;
 	-webkit-box-shadow:0 0 10px rgba(0, 0, 0, .15);  
 	-moz-box-shadow:0 0 10px rgba(0, 0, 0, .15);  
 	box-shadow:0 0 10px rgba(0, 0, 0, .15); 
