--- a/css/style.css
+++ b/css/style.css
@@ -322,6 +322,9 @@ i{
     font-style: italic;
 }
 .graid3-li{
+	/*font-family: 'Times New Roman';*/
+	color: #000000;
+	font-size: 1.1em;
     padding: 0px 5px 10px 5px;
 }
 .graid3-ul a{
