--- a/css/style.css
+++ b/css/style.css
@@ -117,33 +117,125 @@ img{max-width:100%;}
 
 /*---End-header---*/
 /*---content----*/
+
+.mygrid{
+	display: flex;
+}
+
+.container {
+  display: flex;
+  flex-direction: row-reverse;
+}
+.container > .image {
+  flex: 1 0 0%;
+  text-align:right;/* and here*/
+	width:100%;
+	height:300px;
+	position:relative;
+	margin-left:0;
+	margin-right:0;
+	margin-bottom:12px;
+	margin-top:32px;
+}
+.image > img {
+		margin-left:0;
+	margin-right:0;
+  vertical-align:top;/* here */
+  max-width: 150%;
+  max-height: 100%;
+}
+.container > .text {
+  flex: 1.5 0 0%;
+  /* and eventually */
+
+  margin:auto ;
+}
+
+.container h3{
+
+	font-family: 'gandhi_sansregular', "微软雅黑";
+	color: #000000;
+	font-size: 2.2em;
+	width: 57%;
+	margin: 5% 0% 0% 10%;
+	/*vertical-align:middle;*/
+}
+
+/*.container img{*/
+/*	!*display: table-cell;*!*/
+/*	!*vertical-align: auto;*!*/
+/*	background:#465653;*/
+/*	!*padding:0px;*!*/
+/*	!*border-radius: 0%;*!*/
+/*}*/
+.container p a,.container p{
+	/*vertical-align:middle;*/
+	font-family: 'gandhi_sansregular';
+	color: #000000;
+	font-size: 1.4em;
+	line-height: 1.5em;
+}
+.container p{
+	/*vertical-align:middle;*/
+	width: 57%;
+	/*margin:0 auto;*/
+	margin: 0% 0% 0% 10%;
+}
+.container p a{
+	/*vertical-align:middle;*/
+	font-size: 1em;
+	padding-left: 5px;
+	color:#7e76c8;
+	transition: 0.5s ease;
+	-o-transition: 0.5s ease;
+	-webkit-transition: 0.5s ease;
+}
+.container p a:hover{
+	/*vertical-align:middle;*/
+	color:#FFF;
+}
+
+
 .grid1{
+	/*vertical-align:middle;*/
 	/* background:#4dc9b0; */
-	background:#c5e1a5;
-	text-align:center;
+	/*display: flex;*/
+	/*background:#c5e1a5;*/
+	background:#ffffff;
+	/*text-align:left;*/
 	padding: 50px 0px 15px 0px;
+	/*vertical-align:middle*/
 }
 .grid1 h3{
+
 	font-family: 'gandhi_sansregular', "微软雅黑";
-	color: #FFF;
+	color: #000000;
 	font-size: 2.2em;
+	width: 57%;
+	margin:0 auto;
+	/*vertical-align:middle;*/
 }
 .grid1 img{
+	/*display: table-cell;*/
+	/*vertical-align: auto;*/
 	background:#465653;
 	/*padding:0px;*/
 	/*border-radius: 0%;*/
 }
 .grid1 p a,.grid1 p{
+	/*vertical-align:middle;*/
 	font-family: 'gandhi_sansregular';
-	color: #FFF;
+	color: #000000;
 	font-size: 1.4em;
 	line-height: 1.5em;
 }
 .grid1 p{
+	/*vertical-align:middle;*/
 	width: 57%;
 	margin:0 auto;
 }
 .grid1 p a{
+	/*vertical-align:middle;*/
 	font-size: 1em;
 	padding-left: 5px;
 	color:#2a323a;
@@ -152,6 +244,7 @@ img{max-width:100%;}
 	-webkit-transition: 0.5s ease;
 }
 .grid1 p a:hover{
+	/*vertical-align:middle;*/
 	color:#FFF;
 }
 /*---grid2----*/
@@ -873,4 +966,5 @@ ol.type li a:hover {
 	margin-left:auto;
 	margin-right:auto;
 	margin-bottom:12px;
+	margin-top:32px;
 }
