--- a/css/style.css
+++ b/css/style.css
@@ -130,18 +130,18 @@ img{max-width:100%;}
   flex: 1 0 0%;
   text-align:right;/* and here*/
 	width:100%;
-	height:300px;
+	height:100%;
 	position:relative;
 	margin-left:0;
 	margin-right:0;
-	margin-bottom:12px;
-	margin-top:32px;
+	margin-bottom:0%;
+	margin-top:3%;
 }
 .image > img {
 		margin-left:0;
 	margin-right:0;
   vertical-align:top;/* here */
-  max-width: 150%;
+  max-width: 100%;
   max-height: 100%;
 }
 .container > .text {
