--- a/css/style.css
+++ b/css/style.css
@@ -625,6 +625,9 @@ i{
 }
 .paper-image {
 	width: 100%;
+	display: block;
+	margin-left: auto;
+	margin-right: auto
 }
 .paper-title {
 	font-size: 1.1em;
