--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ img{max-width:100%;}
 
 .container h3{
 
-	font-family: 'gandhi_sansregular', "微软雅黑";
+	font-family: 'Georgia', "微软雅黑";
 	color: #000000;
 	font-size: 2.2em;
 	width: 57%;
@@ -170,7 +170,7 @@ img{max-width:100%;}
 /*}*/
 .container p a,.container p{
 	/*vertical-align:middle;*/
-	font-family: 'gandhi_sansregular';
+	font-family: 'Georgia';
 	color: #000000;
 	font-size: 1.4em;
 	line-height: 1.5em;
@@ -361,13 +361,13 @@ i{
 	margin: 0 auto;
 }
 .grid3-header h3{
-	font-family: 'gandhi_sansregular';
+	font-family: 'Georgia';
 	color: #2A323A;
 	font-size: 2.3em;
 	padding-bottom: 1px;
 }
 .grid3-header p{
-	font-family: 'gandhi_sansregular';
+	font-family: 'Georgia';
 	color: #2A323A;
 	font-size: 1.2em;
 	line-height: 1.5em;
@@ -411,7 +411,7 @@ i{
 }
 
 .graid3-ul{
-	font-family: 'gandhi_sansregular', "微软雅黑";
+	font-family: 'Georgia', "微软雅黑";
 	color: #2A323A;
 	font-size: 1.2em;
 	line-height: 1.5em;
@@ -421,7 +421,7 @@ i{
 	list-style: disc;
 }
 .grid3-content h3{
-	font-family: 'gandhi_sansregular';
+	font-family: 'Georgia';
 	color: #2A323A;
 	font-size: 1.5em;
 	padding: 10px 0px 15px 0px;
@@ -433,10 +433,16 @@ i{
     font-style: italic;
 }
 .graid3-li{
-	/*font-family: 'Times New Roman';*/
+	font-family: 'Georgia';
 	color: #000000;
 	font-size: 1.1em;
     padding: 0px 5px 10px 5px;
+}
+.graid3-li2{
+	font-family: 'Georgia';
+	color: #000000;
+	font-size: 1.3em;
+	padding: 0px 5px 10px 5px;
 }
 .graid3-ul a{
     color: #665cbe;
