--- a/css/style.css
+++ b/css/style.css
@@ -635,6 +635,18 @@ i{
 	margin-left: auto;
 	margin-right: auto
 }
+.div1 {
+	overflow:auto;
+}
+.img {
+	float: left;
+	margin-left: auto;
+	margin-right: auto;
+	width: 20%;
+}
+.div2 {
+	float: left;
+}
 .paper-title {
 	font-size: 1.1em;
 	/*font-weight: bold;*/
