--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ img{max-width:100%;}
 
 .container h3{
 
-	font-family: 'Georgia', "微软雅黑";
+	font-family: 'Georgia', "KaiTi";
 	color: #000000;
 	font-size: 2.2em;
 	width: 57%;
@@ -226,7 +226,7 @@ figcaption {
 }
 .grid1 h3{
 
-	font-family: 'gandhi_sansregular', "微软雅黑";
+	font-family: 'gandhi_sansregular', "KaiTi";
 	color: #000000;
 	font-size: 2.2em;
 	width: 57%;
@@ -328,7 +328,7 @@ figcaption {
 }
 
 .graid2-ul{
-	font-family: 'gandhi_sansregular', "微软雅黑";
+	font-family: 'gandhi_sansregular', "KaiTi";
 	color: #2A323A;
 	font-size: 1.2em;
 	line-height: 1.5em;
@@ -399,7 +399,7 @@ i{
 }
 .grid3-right{
 	float: right;
-	width: 57%;	
+	width: 57%;
 	background: #fff;
 	padding: 4px;
 	box-shadow: 0px 0px 10px rgba(136, 136, 136, 0.14);
@@ -411,7 +411,7 @@ i{
 }
 
 .graid3-ul{
-	font-family: 'Georgia', "微软雅黑";
+	font-family: 'Georgia', "KaiTi";
 	color: #2A323A;
 	font-size: 1.2em;
 	line-height: 1.5em;
@@ -516,7 +516,7 @@ i{
 }
 
 .graid4-ul{
-	font-family: 'Georgia', "微软雅黑";
+	font-family: 'Georgia', "KaiTi";
 	color: #2A323A;
 	font-size: 1.2em;
 	line-height: 1.5em;
@@ -829,7 +829,7 @@ fieldset[disabled] .btn-confirm.active {
 @media only screen and (max-width: 1280px) and (min-width: 1024px) {
 	.wrap{
 		width:90%;
-	}		
+	}
 	.grid3-content {
 		width: 76%;
 	}
@@ -840,7 +840,7 @@ fieldset[disabled] .btn-confirm.active {
 @media only screen and (max-width: 1024px) and (min-width: 768px) {
 	.wrap{
 		width:90%;
-	}	
+	}
 	.grid3-content {
 		width: 83%;
 	}
@@ -866,7 +866,7 @@ fieldset[disabled] .btn-confirm.active {
 @media only screen and (max-width: 768px) and (min-width: 640px) {
 	.wrap{
 		width:90%;
-	}	
+	}
 	.grid3-content {
 		width: 83%;
 	}
@@ -881,7 +881,7 @@ fieldset[disabled] .btn-confirm.active {
 	}
 	.catch-me p {
 		width:70%;
-	}	
+	}
 	.grid2 ul li {
 		width: 160px;
 	}
@@ -907,11 +907,11 @@ fieldset[disabled] .btn-confirm.active {
 }
 
 
-/* Gallery Section 
+/* Gallery Section
 ==============================*/
 #works {
 	padding: 10px 0;
-	background: #4dc9b0; /* Old browsers */ 
+	background: #4dc9b0; /* Old browsers */
 }
 .categories {
 	padding-bottom: 30px;
@@ -1002,7 +1002,7 @@ ol.type li a:hover {
 	position: relative;
 }
 .hover-bg .hover-text {
-	font-family: 'gandhi_sansregular', "微软雅黑";
+	font-family: 'gandhi_sansregular', "KaiTi";
 	position: absolute;
 	text-align: center;
 	margin: 0 auto;
@@ -1056,11 +1056,11 @@ ol.type li a:hover {
 	background:#2a323a;
 	padding: 3px 0;
 	color:#ffffff;
-	
+
 }
 
 .portfolio-botom a{
-	font-family: 'gandhi_sansregular', "微软雅黑";	
+	font-family: 'gandhi_sansregular', "KaiTi";
 	color:#FFF;
 	font-size: 18px;
 	transition: 0.5s ease;
