--- a/css/style.css
+++ b/css/style.css
@@ -755,7 +755,7 @@ i{
 .paper-title {
 	font-size: 1.15em;
 	/*font-weight: bold;*/
-	/*font-family: 'Bookman';*/
+	/*font-family: 'Baskerville';*/
 }
 .paper-authors {
 	font-size: 1.0em;
