--- a/css/style.css
+++ b/css/style.css
@@ -756,6 +756,7 @@ i{
 	font-size: 1.15em;
 	/*font-weight: bold;*/
 	/*font-family: 'Baskerville';*/
+	font-family: 'Rockwell';
 }
 .paper-authors {
 	font-size: 1.0em;
