--- a/css/style.css
+++ b/css/style.css
@@ -749,6 +749,13 @@ i{
 	margin-right: 1%;
 	width: 20%;
 }
+img.custom1 {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	/*height: 50%;*/
+	/*width: 80%;*/
+}
 .div2 {
 	float: left;
 }
