--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,7 @@ img{max-width:100%;}
 	font-family: 'Georgia', "KaiTi";
 	color: #000000;
 	font-size: 2.2em;
-	width: 57%;
+	/* width: 150%; */
 	margin: 5% 0% 0% 0%;
 	/*vertical-align:middle;*/
 }
@@ -177,14 +177,14 @@ img{max-width:100%;}
 }
 .container p{
 	/*vertical-align:middle;*/
-	width: 57%;
+	/* width: 57%; */
 	/*margin:0 auto;*/
 	margin: 0% 0% 0% 0%;
 }
 .container p a{
 	/*vertical-align:middle;*/
 	font-size: 1em;
-	padding-left: 5px;
+	/* padding-left: 5px; */
 	color:#7e76c8;
 	transition: 0.5s ease;
 	-o-transition: 0.5s ease;
